<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FPI</string>
    <string name="set_location">Set Location</string>
    <string name="select_apps">Select Apps</string>
    <string name="location_msg">Location Set to</string>
    <string name="location_msg_stopped">Location emulation is stopped</string>
    <string name="search">Search</string>
    <string name="update_list">Add/Remove</string>
    <string name="hint">com.example.appname</string>
    <string name="hint2">Address</string>
    <string name="installed"><u>Installed applications</u></string>
    <string name="hooked"><u>Hooked applications</u></string>
</resources>
